--- a/dynamic_box.css
+++ b/dynamic_box.css
@@ -35,11 +35,11 @@
 
 
 /* button background */
-.btn.btn-white {background:#ffffff; border-color: #ffffff; color: #232323}
-.btn.btn-white:hover, .btn.btn-white:focus {background: transparent; color: #fff}
+.btn2.btn2-white {background:#ffffff; border-color: #ffffff; color: #232323}
+.btn2.btn2-white:hover, .btn2.btn2-white:focus {background: transparent; color: #fff}
 
 /* button rounded */
-.btn.btn-rounded {border-radius: 50px}
+.btn2.btn2-rounded {border-radius: 50px}
 
 
 
@@ -228,7 +228,7 @@ figure {
 
 
 
-.btn {
+.btn2 {
 	display: inline-block;
 	padding: 6px 12px;
 	margin-bottom: 0;
@@ -249,24 +249,24 @@ figure {
 	border-radius: 4px
 }
 
-.btn.focus,
-.btn:focus,
-.btn:hover {
+.btn2.focus,
+.btn2:focus,
+.btn2:hover {
 	color: #333;
 	text-decoration: none
 }
 
-.btn.active,
-.btn:active {
+.btn2.active,
+.btn2:active {
 	background-image: none;
 	outline: 0;
 	-webkit-box-shadow: inset 0 3px 5px rgba(0, 0, 0, .125);
 	box-shadow: inset 0 3px 5px rgba(0, 0, 0, .125)
 }
 
-.btn.disabled,
-.btn[disabled],
-fieldset[disabled] .btn {
+.btn2.disabled,
+.btn2[disabled],
+fieldset[disabled] .btn2 {
 	cursor: not-allowed;
 	filter: alpha(opacity=65);
 	-webkit-box-shadow: none;
@@ -274,8 +274,8 @@ fieldset[disabled] .btn {
 	opacity: .65
 }
 
-a.btn.disabled,
-fieldset[disabled] a.btn {
+a.btn2.disabled,
+fieldset[disabled] a.btn2 {
 	pointer-events: none
 }
 
